Fix issues with visitor (#3249)
- Simplify test setup and execution.
- Update visitor to collect fields from top-level nodes in separate
subsets.
- Update rule to provide more information about which query subsets are
considered immaterial.

---------

Co-authored-by: foster33 <84727868+foster33@users.noreply.github.com>