@@ -1,12 +1,13 @@
 package datawave.query.jexl.visitors;
 
-import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.Date;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.accumulo.core.client.TableNotFoundException;
 import org.apache.commons.jexl3.parser.ASTEQNode;
@@ -22,14 +23,13 @@ import org.apache.commons.jexl3.parser.ASTNENode;
 import org.apache.commons.jexl3.parser.ASTNRNode;
 import org.apache.commons.jexl3.parser.ASTOrNode;
 import org.apache.commons.jexl3.parser.JexlNode;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.hadoop.util.Sets;
 
-import datawave.microservice.query.Query;
 import datawave.query.jexl.JexlASTHelper;
 import datawave.query.jexl.functions.JexlFunctionArgumentDescriptorFactory;
 import datawave.query.jexl.functions.arguments.JexlArgumentDescriptor;
 import datawave.query.util.MetadataHelper;
+import datawave.util.time.DateHelper;
 
 /**
  * Class to check that each query node contains a field which exists in the schema for the given date range.
@@ -37,22 +37,15 @@ import datawave.query.util.MetadataHelper;
  * <pre>
  * 1. If a datatype filter was specified, then the existence check is limited to only those datatypes
  * 2. If a datatype filter is NOT specified (null or empty), this implies ALL datatypes.
- * 3. If querySettings is NOT specified (null), it will not report any missing fields. This is due to no begin or end date being provided.
  * </pre>
  */
 public class FieldMissingFromDateRangeVisitor extends ShortCircuitBaseVisitor {
 
-    private static final Logger log = LoggerFactory.getLogger(FieldMissingFromDateRangeVisitor.class);
-
     private final MetadataHelper helper;
     private final Set<String> datatypeFilter;
-    private final Query querySettings;
-    private final Set<String> specialFields;
 
-    public FieldMissingFromDateRangeVisitor(MetadataHelper helper, Set<String> datatypeFilter, Set<String> specialFields, Query querySettings) {
+    public FieldMissingFromDateRangeVisitor(MetadataHelper helper, Set<String> datatypeFilter) {
         this.helper = helper;
-        this.querySettings = querySettings;
-        this.specialFields = specialFields;
         // if given datatypeFilter is empty or null, assume that means ALL datatypes
         if (datatypeFilter == null) {
             datatypeFilter = Collections.emptySet();
@@ -62,108 +55,82 @@ public class FieldMissingFromDateRangeVisitor extends ShortCircuitBaseVisitor {
 
     @SuppressWarnings("unchecked")
     public static Set<String> getNonIngestedFields(MetadataHelper helper, ASTJexlScript script, Set<String> datatypes, Set<String> specialFields,
-                    Query querySettings) {
-        SimpleDateFormat formatter = new SimpleDateFormat("yyyyMMdd");
-        FieldMissingFromDateRangeVisitor visitor = new FieldMissingFromDateRangeVisitor(helper, datatypes, specialFields, querySettings);
+                    Date beginDate, Date endDate) {
+        if (datatypes == null) {
+            datatypes = Collections.emptySet();
+        }
+
         // Collect the fields
-        Set<String> collectedFields = (Set<String>) script.jjtAccept(visitor, new LinkedHashSet<>());
-        if (collectedFields != null && !collectedFields.isEmpty()) {
-            Set<String> missingFields = visitor.helper.getMissingFieldsInDateRange(collectedFields, visitor.datatypeFilter,
-                            formatter.format(visitor.querySettings.getBeginDate()), formatter.format(visitor.querySettings.getEndDate()),
-                            visitor.specialFields);
-            if (script.jjtGetChild(0) instanceof ASTOrNode) {
-                // If it is an OR node, check if all fields are missing.
-                if (missingFields.containsAll(collectedFields)) {
-                    if (log.isDebugEnabled()) {
-                        log.debug("Found missing fields:  {}", missingFields);
-                    }
-                    return missingFields;
-                } else {
-                    // If only some are missing, we do not want to return any.
-                    return Collections.emptySet();
-                }
-            } else {
-                // Not an OR node, so return the missing fields we found.
-                return missingFields;
-            }
-        } else {
-            return Collections.emptySet();
+        FieldMissingFromDateRangeVisitor visitor = new FieldMissingFromDateRangeVisitor(helper, datatypes);
+        List<Set<String>> fieldSets = (List<Set<String>>) script.jjtAccept(visitor, new ArrayList<>());
+
+        if (fieldSets.isEmpty()) {
+            return Set.of();
         }
+
+        // @formatter:off
+        Set<String> allFields = fieldSets.stream()
+                        .flatMap(Set::stream)
+                        .collect(Collectors.toSet());
+        // @formatter:on
+
+        // If only special field were found, do not return any fields.
+        if (specialFields.containsAll(allFields)) {
+            return Set.of();
+        }
+
+        // Fetch all fields not found in the target date range.
+        Set<String> missingFields = visitor.helper.getMissingFieldsInDateRange(allFields, datatypes, DateHelper.format(beginDate), DateHelper.format(endDate),
+                        specialFields);
+
+        // @formatter:off
+        return fieldSets.stream()
+                        .filter((set) -> !set.isEmpty())
+                        .filter((set) -> Sets.intersection(specialFields, set).isEmpty())
+                        .filter(missingFields::containsAll)
+                        .flatMap(Set::stream)
+                        .collect(Collectors.toCollection(LinkedHashSet::new));
+        // @formatter:on
     }
 
-    /**
-     * @param node
-     *            Jexl node
-     * @param data
-     *            The set of names which we have determined have not been ingested during the date range.
-     * @return the updated set of names which have not been ingested during the date range.
-     */
-    private Object collectFields(ASTOrNode node, Object data) throws TableNotFoundException {
-        @SuppressWarnings("unchecked")
-        Set<String> collectedFieldNames = (Set<String>) data;
-        List<ASTIdentifier> identifiers;
-
-        int numChildren = node.jjtGetNumChildren();
-
-        for (int i = 0; i < numChildren; i++) {
-            JexlNode child = node.jjtGetChild(i);
-
-            // A node could be literal == literal in terms of an identityQuery
-            try {
-                identifiers = JexlASTHelper.getIdentifiers(child);
-            } catch (NoSuchElementException e) {
-                return collectedFieldNames;
-            }
-
-            if (identifiers.isEmpty()) {
-                // Catch cases where we have two literals
-                // essentially everything but identifier op literal
-                return collectedFieldNames;
-            }
-
-            for (ASTIdentifier identifier : identifiers) {
-                String fieldName = JexlASTHelper.deconstructIdentifier(identifier);
-                if (!specialFields.contains(fieldName)) {
-                    collectedFieldNames.add(fieldName);
-                }
-            }
-        }
-        return collectedFieldNames;
-    }
-
-    /**
-     * @param node
-     *            Jexl node
-     * @param data
-     *            The set of names which we have determined have not been ingested during the date range.
-     * @return the updated set of names which have not been ingested during the date range.
-     */
+    // Collect all field names in given node.
     private Object collectFields(JexlNode node, Object data) throws TableNotFoundException {
-        @SuppressWarnings("unchecked")
-        Set<String> collectedFieldNames = (Set<String>) data;
+        // If data is a set, the node is a descendant of an OR node.
+        if (data instanceof Set) {
+            // noinspection unchecked
+            addFields(node, (Set<String>) data);
+        } else {
+            // Otherwise it is a top-level node. Create a new set and collect all fields into it.
+            @SuppressWarnings("unchecked")
+            List<Set<String>> fieldSets = (List<Set<String>>) data;
+            Set<String> fields = new LinkedHashSet<>();
+            collectFields(node, fields);
+            fieldSets.add(fields);
+        }
+        return data;
+    }
+
+    // All fields from the given node to the given candidate node.
+    private void addFields(JexlNode node, Set<String> data) {
         List<ASTIdentifier> identifiers;
 
         // A node could be literal == literal in terms of an identityQuery
         try {
             identifiers = JexlASTHelper.getIdentifiers(node);
         } catch (NoSuchElementException e) {
-            return collectedFieldNames;
+            return;
         }
 
         if (identifiers.isEmpty()) {
             // Catch cases where we have two literals
             // essentially everything but identifier op literal
-            return collectedFieldNames;
+            return;
         }
 
         for (ASTIdentifier identifier : identifiers) {
             String fieldName = JexlASTHelper.deconstructIdentifier(identifier);
-            if (!specialFields.contains(fieldName)) {
-                collectedFieldNames.add(fieldName);
-            }
+            data.add(fieldName);
         }
-        return collectedFieldNames;
-
     }
 
     @Override
@@ -240,19 +207,28 @@ public class FieldMissingFromDateRangeVisitor extends ShortCircuitBaseVisitor {
 
     @Override
     public Object visit(ASTFunctionNode node, Object data) {
-        JexlArgumentDescriptor desc = JexlFunctionArgumentDescriptorFactory.F.getArgumentDescriptor(node);
-        @SuppressWarnings("unchecked")
-        Set<String> collectedFieldNames = (null == data) ? new HashSet<>() : (Set<String>) data;
-
-        for (String fieldName : desc.fields(this.helper, this.datatypeFilter)) {
-            // deconstruct the identifier
-            final String testFieldName = JexlASTHelper.deconstructIdentifier(fieldName);
-            // changed to allow _ANYFIELD_ in functions
-            if (!specialFields.contains(fieldName)) {
-                collectedFieldNames.add(fieldName);
-            }
+        // If data is a set, this function node is a descendant of an OR node.
+        if (data instanceof Set) {
+            // noinspection unchecked
+            addFields(node, (Set<String>) data);
+        } else {
+            // Otherwise this is a top-level node. Create a new set of fields and collect all fields from the function node.
+            @SuppressWarnings("unchecked")
+            List<Set<String>> fieldSets = (List<Set<String>>) data;
+            Set<String> fields = new LinkedHashSet<>();
+            addFields(node, fields);
+            fieldSets.add(fields);
         }
-        return collectedFieldNames;
+        return data;
+    }
+
+    // Add all fields found within the given function node to the given set.
+    private void addFields(ASTFunctionNode node, Set<String> fields) {
+        JexlArgumentDescriptor desc = JexlFunctionArgumentDescriptorFactory.F.getArgumentDescriptor(node);
+        for (String fieldName : desc.fields(this.helper, this.datatypeFilter)) {
+            fieldName = JexlASTHelper.deconstructIdentifier(fieldName);
+            fields.add(fieldName);
+        }
     }
 
     // Descend through these nodes
@@ -264,10 +240,20 @@ public class FieldMissingFromDateRangeVisitor extends ShortCircuitBaseVisitor {
 
     @Override
     public Object visit(ASTOrNode node, Object data) {
-        try {
-            return collectFields(node, data);
-        } catch (TableNotFoundException e) {
-            throw new RuntimeException(e);
+        // If data is a set, this OR node is nested within another OR node. Pass it along to its children.
+        if (data instanceof Set) {
+            node.childrenAccept(this, data);
+        } else {
+            // Otherwise this is a top-level OR node. Create a new set and collect all fields from the node's children.
+            @SuppressWarnings("unchecked")
+            List<Set<String>> fieldSets = (List<Set<String>>) data;
+            Set<String> fields = new LinkedHashSet<>();
+            node.childrenAccept(this, fields);
+            if (!fields.isEmpty()) {
+                fieldSets.add(fields);
+            }
         }
+        return data;
     }
+
 }
