@@ -1,102 +1,131 @@
 package datawave.query.rules;
 
+import static datawave.query.Constants.ANY_FIELD;
+import static datawave.query.Constants.NO_FIELD;
+
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.Date;
 import java.util.HashSet;
 import java.util.Set;
 
-import org.apache.accumulo.core.security.Authorizations;
+import org.apache.accumulo.core.client.TableNotFoundException;
 import org.easymock.EasyMock;
+import org.easymock.EasyMockExtension;
+import org.easymock.Mock;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import datawave.microservice.query.Query;
 import datawave.query.util.MetadataHelper;
-import datawave.query.util.MockMetadataHelper;
-import datawave.util.TableName;
+import datawave.util.time.DateHelper;
 
+@ExtendWith(EasyMockExtension.class)
 public class FieldExistenceRuleTest extends ShardQueryRuleTest {
 
-    private static final Set<String> ALL_FIELDS = Set.of("FOO", "BAR", "BAT");
-    private static final String[] AUTHS = {"FOO", "BAR", "BAT"};
-    private static final Set<Authorizations> AUTHS_SET = Collections.singleton(new Authorizations(AUTHS));
-    private static final String ANYFIELD = "_ANYFIELD_";
-    private static final MockMetadataHelper defaultMetadataHelper = new MockMetadataHelper(AUTHS_SET, AUTHS_SET);
+    private static final String beginDate = "20201231";
+    private static final String endDate = "20251231";
+    private static final Set<String> specialFields = Set.of(ANY_FIELD, NO_FIELD);
 
-    private final Set<String> fieldExceptions = new HashSet<>();
+    @Mock
+    private MetadataHelper helper;
+
+    @Mock
+    private Query settings;
+
+    private final Set<String> existingFields = new HashSet<>();
+    private final Set<String> foundFields = new HashSet<>();
+    private final Set<String> missingFields = new HashSet<>();
 
     @BeforeAll
-    public static void beforeClass() throws Exception {
-        defaultMetadataHelper.addFields(ALL_FIELDS);
-    }
+    public static void beforeClass() throws Exception {}
 
     @BeforeEach
     public void setUp() throws Exception {
-        givenQuerySettings(Mockito.mock(Query.class));
-        Mockito.doReturn(new Date(0L)).when(querySettings).getBeginDate();
-        Mockito.doReturn(new Date(4070908800L)).when(querySettings).getEndDate();
         givenRuleName(RULE_NAME);
-        givenMetadataHelper(defaultMetadataHelper);
+        givenMetadataHelper(helper);
         expectRuleName(RULE_NAME);
-        if (!defaultMetadataHelper.getAccumuloClient().tableOperations().exists(TableName.METADATA)) {
-            defaultMetadataHelper.getAccumuloClient().tableOperations().create(TableName.METADATA);
-        }
+    }
+
+    @AfterEach
+    @Override
+    void tearDown() {
+        query = null;
+        existingFields.clear();
+        foundFields.clear();
+        missingFields.clear();
     }
 
     /**
-     * Test a query where all fields exist.
+     * Test no non-existent fields or immaterial query subsets.
      */
     @Test
-    public void testAllFieldsExist() throws Exception {
-        givenQuery("FOO == 'abc' || BAR =~ 'abc' || filter:includeRegex(BAT, '45*')");
-        expectMessage("Fields not ingested in provided date range: BAR, BAT, FOO");
+    void testNoIssuesFound() throws Exception {
+        givenQuery("AGE == 'foo' || GENDER == 'bar'");
+
+        givenExistingFields("AGE", "GENDER");
+        expectFoundFields("AGE", "GENDER");
+
         assertResult();
+
+        EasyMock.verify(settings, helper);
     }
 
     /**
-     * Test a query where some fields do not exist.
+     * Test the presence of a non-existent field.
      */
     @Test
-    public void testNonExistentFields() throws Exception {
-        givenQuery("TOMFOOLERY == 'abc' || CHAOS =~ 'abc' || filter:includeRegex(SHENANIGANS, '45.8') || FOO == 'aa'");
-        expectMessage("Fields not found in data dictionary: TOMFOOLERY, CHAOS, SHENANIGANS");
-        expectMessage("Fields not ingested in provided date range: CHAOS, TOMFOOLERY, FOO, SHENANIGANS");
+    void testNonExistentFieldFound() throws Exception {
+        givenQuery("AGE == 'foo' || GENDER == 'bar'");
+
+        givenExistingFields("AGE");
+        expectFoundFields("AGE", "GENDER");
+        givenMissingFields("GENDER");
+
+        expectMessage("Fields not found in data dictionary: GENDER");
+
         assertResult();
+
+        EasyMock.verify(settings, helper);
     }
 
     /**
-     * Test a query that has a non-existent field that is a special field.
+     * Test the presence of an immaterial query subset.
      */
     @Test
-    public void testSpecialField() throws Exception {
-        givenQuery("FOO == 'abc' || TOMFOOLERY == 'abc' || _ANYFIELD_ = 'abc'");
-        givenFieldException(ANYFIELD);
-        expectMessage("Fields not found in data dictionary: TOMFOOLERY");
-        expectMessage("Fields not ingested in provided date range: TOMFOOLERY, FOO");
+    void testImmaterialFieldsFound() throws Exception {
+        givenQuery("AGE == 'foo' || GENDER == 'bar'");
+
+        givenExistingFields("AGE", "GENDER");
+        expectFoundFields("AGE", "GENDER");
+        givenMissingFields("AGE", "GENDER");
+
+        expectMessage("Fields not ingested in the provided date range: [AGE, GENDER]");
+
         assertResult();
+
+        EasyMock.verify(settings, helper);
     }
 
     /**
-     * Test a scenario where an exception gets thrown by the metadata helper.
+     * Test the presence of a non-existent field and an immaterial query subset.
      */
     @Test
-    public void testExceptionThrown() throws Exception {
-        MetadataHelper mockHelper = EasyMock.createMock(MetadataHelper.class);
-        Exception exception = new IllegalArgumentException("Failed to fetch all fields");
-        EasyMock.expect(mockHelper.getAllFields(Collections.emptySet())).andThrow(exception);
-        EasyMock.replay(mockHelper);
+    void testNonExistentFieldsAndImmaterialFieldsFound() throws Exception {
+        givenQuery("NAME == 'hat' && (AGE == 'foo' || GENDER == 'bar')");
 
-        givenQuery("FOO == 'abc'");
-        givenMetadataHelper(mockHelper);
+        givenExistingFields("AGE", "GENDER");
+        expectFoundFields("AGE", "GENDER", "NAME");
+        givenMissingFields("AGE", "GENDER");
 
-        expectException(exception);
+        expectMessage("Fields not found in data dictionary: NAME");
+        expectMessage("Fields not ingested in the provided date range: [AGE, GENDER]");
+
         assertResult();
-    }
 
-    private void givenFieldException(String exception) {
-        this.fieldExceptions.add(exception);
+        EasyMock.verify(settings, helper);
     }
 
     @Override
@@ -106,8 +135,37 @@ public class FieldExistenceRuleTest extends ShardQueryRuleTest {
 
     @Override
     protected ShardQueryRule getNewRule() {
+        EasyMock.expect(settings.getBeginDate()).andReturn(DateHelper.parse(beginDate)).anyTimes();
+        EasyMock.expect(settings.getEndDate()).andReturn(DateHelper.parse(endDate)).anyTimes();
+        givenQuerySettings(settings);
+
+        try {
+            EasyMock.expect(helper.getAllFields(Collections.emptySet())).andReturn(existingFields);
+        } catch (TableNotFoundException e) {
+            throw new RuntimeException(e);
+        }
+
+        if (!foundFields.isEmpty()) {
+            EasyMock.expect(helper.getMissingFieldsInDateRange(foundFields, Collections.emptySet(), beginDate, endDate, specialFields))
+                            .andReturn(missingFields);
+        }
+
+        EasyMock.replay(settings, helper);
+
         FieldExistenceRule rule = new FieldExistenceRule(ruleName);
-        rule.setSpecialFields(fieldExceptions);
+        rule.setSpecialFields(specialFields);
         return rule;
+    }
+
+    private void givenExistingFields(String... fields) {
+        this.existingFields.addAll(Arrays.asList(fields));
+    }
+
+    private void expectFoundFields(String... fields) {
+        this.foundFields.addAll(Arrays.asList(fields));
+    }
+
+    private void givenMissingFields(String... fields) {
+        this.missingFields.addAll(Arrays.asList(fields));
     }
 }
